fixed double scroll issue

--- a/components/post/write/PostWriteForm/PostWriteForm.scss
+++ b/components/post/write/PostWriteForm/PostWriteForm.scss
@@ -42,7 +42,7 @@
   width: calc(100% - 4rem);
   display: inline-block;
   outline-style: none;
-  height: calc(100% - 4rem);
+  height: calc(100% - 4.7rem);
   font-size: 1.6rem;
   border: none;
   resize: none;
